templates/manifests/defaults--cilium-secrets.yaml
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
  namespaces: cilium-secrets

spec:
  podSelector: {}
  policyTypes:
    - Ingress
