templates/manifests/defaults--kube-node-lease.yaml
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
  namespace: kube-node-lease

spec:
  podSelector: {}
  policyTypes:
    - Ingress
