templates/manifests/defaults--kube-public.yaml
---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default
  namespace: kube-public

spec:
  podSelector: {}
  policyTypes:
    - Ingress
